Fix nav layout on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -14,7 +14,7 @@ header {
   padding: 0.5rem 0;
   nav {
     display: block;
-    margin: auto;
+    margin: 0.5rem auto;
     max-width: $max-width;
     padding: 0 1rem;
   }
@@ -68,6 +68,7 @@ header {
   h1 {
     font-size: inherit;
     font-weight: bold;
+    margin-right: 1rem;
   }
   nav {
     h1 {
@@ -75,7 +76,9 @@ header {
     }
     p {
       display: inline-block;
-      margin-left: 1rem;
+    }
+    h1, p {
+      margin: 0 1rem 0 0;
     }
   }
 }
